--- a/app/src/main/res/layout/alert_download_dialog.xml
+++ b/app/src/main/res/layout/alert_download_dialog.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="@color/button_background_color">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/sign_up_layout_step_1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent"
+        android:background="@color/button_background_color"
         android:orientation="vertical">
 
         <View
