--- a/app/src/main/res/layout/alert_download_dialog.xml
+++ b/app/src/main/res/layout/alert_download_dialog.xml
@@ -3,10 +3,191 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="360dp"
     android:background="@color/button_background_color">
-
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:cardBackgroundColor="@color/download_background_color"
+            app:cardCornerRadius="30dp">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/select_download_quality"
+                    android:textColor="@color/text_color"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:layout_margin="25dp"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/line_color"/>
+
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fillViewport="true">
+
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="40dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:cardBackgroundColor="@color/button_background_color"
+                            app:cardCornerRadius="5dp">
+
+                            <androidx.appcompat.widget.LinearLayoutCompat
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_margin="10dp">
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:layout_width="0dp"
+                                    android:layout_weight="0.300"
+                                    android:layout_height="match_parent"
+                                    android:adjustViewBounds="true"
+                                    android:layout_gravity="end"
+                                    android:padding="5dp"
+                                    app:srcCompat="@drawable/ic_hd"/>
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:id="@+id/hd_quality"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="0.700"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="start|center"
+                                    android:padding="5dp"
+                                    android:textStyle="bold"
+                                    android:textSize="20sp"
+                                    android:textColor="@color/white_opycity_hundred_present"
+                                    android:gravity="center|start"
+                                    android:text="@string/hd_720p"/>
+
+                            </androidx.appcompat.widget.LinearLayoutCompat>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            app:cardBackgroundColor="@color/button_background_color_2"
+                            app:cardCornerRadius="5dp">
+
+                            <androidx.appcompat.widget.LinearLayoutCompat
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_margin="10dp">
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:layout_width="0dp"
+                                    android:layout_weight="0.300"
+                                    android:layout_height="match_parent"
+                                    android:adjustViewBounds="true"
+                                    android:layout_gravity="end"
+                                    android:padding="5dp"
+                                    app:srcCompat="@drawable/ic_sd"/>
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:id="@+id/sd_quality"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="0.700"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="start|center"
+                                    android:padding="5dp"
+                                    android:textStyle="bold"
+                                    android:textSize="20sp"
+                                    android:textColor="@color/text_color_2"
+                                    android:gravity="center|start"
+                                    android:text="@string/sd_420p"/>
+                            </androidx.appcompat.widget.LinearLayoutCompat>
+                        </androidx.cardview.widget.CardView>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp">
+
+                            <androidx.appcompat.widget.AppCompatEditText
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerInParent="true"
+                                android:text="@string/save_as_default"
+                                android:textColor="@color/white_opycity_hundred_present"
+                                android:textSize="12sp"
+                                tools:ignore="RelativeOverlap" />
+
+                            <CheckBox
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerInParent="true"
+                                android:buttonTint="@color/white" />
+
+                        </RelativeLayout>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="30dp"
+                            app:cardBackgroundColor="@color/done_button_color"
+                            app:cardCornerRadius="5dp">
+
+                            <androidx.appcompat.widget.LinearLayoutCompat
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_margin="10dp">
+
+                                <androidx.appcompat.widget.AppCompatTextView
+                                    android:id="@+id/done"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:padding="5dp"
+                                    android:textStyle="bold"
+                                    android:textSize="20sp"
+                                    android:textColor="@color/white"
+                                    android:gravity="center"
+                                    android:text="@string/done"/>
+
+                            </androidx.appcompat.widget.LinearLayoutCompat>
+                        </androidx.cardview.widget.CardView>
+
+
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+
+                </androidx.core.widget.NestedScrollView>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.cardview.widget.CardView>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+    <!--<androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/sign_up_layout_step_1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -197,6 +378,6 @@
             android:layout_height="0dp"
             android:layout_weight="0.150" />
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.appcompat.widget.LinearLayoutCompat>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
