--- a/app/src/main/res/layout/alert_download_dialog.xml
+++ b/app/src/main/res/layout/alert_download_dialog.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="360dp"
-    android:background="@color/button_background_color">
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="bottom">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_height="500dp"
+            android:layout_marginBottom="65dp"
             app:cardBackgroundColor="@color/download_background_color"
             app:cardCornerRadius="30dp">
 
@@ -152,6 +152,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="30dp"
+                            android:layout_marginBottom="30dp"
                             app:cardBackgroundColor="@color/done_button_color"
                             app:cardCornerRadius="5dp">
 
