--- a/app/src/main/res/layout/alert_download_dialog.xml
+++ b/app/src/main/res/layout/alert_download_dialog.xml
@@ -5,15 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/transparent"
         android:gravity="bottom">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="500dp"
-            android:layout_marginBottom="65dp"
             app:cardBackgroundColor="@color/download_background_color"
             app:cardCornerRadius="30dp">
 
@@ -25,169 +26,161 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="25dp"
+                    android:gravity="center"
                     android:text="@string/select_download_quality"
                     android:textColor="@color/text_color"
-                    android:layout_gravity="center"
-                    android:gravity="center"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:layout_margin="25dp"/>
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:background="@color/line_color"/>
+                    android:background="@color/line_color" />
 
-                <androidx.core.widget.NestedScrollView
+                <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:fillViewport="true">
+                    android:layout_gravity="center"
+                    android:layout_margin="40dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="40dp"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:orientation="vertical">
+                        android:layout_height="wrap_content"
+                        app:cardBackgroundColor="@color/button_background_color"
+                        app:cardCornerRadius="5dp">
 
-
-                        <androidx.cardview.widget.CardView
+                        <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:cardBackgroundColor="@color/button_background_color"
-                            app:cardCornerRadius="5dp">
+                            android:layout_height="match_parent"
+                            android:layout_margin="10dp">
 
-                            <androidx.appcompat.widget.LinearLayoutCompat
-                                android:layout_width="match_parent"
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:layout_width="0dp"
                                 android:layout_height="match_parent"
-                                android:layout_margin="10dp">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:layout_width="0dp"
-                                    android:layout_weight="0.300"
-                                    android:layout_height="match_parent"
-                                    android:adjustViewBounds="true"
-                                    android:layout_gravity="end"
-                                    android:padding="5dp"
-                                    app:srcCompat="@drawable/ic_hd"/>
-
-                                <androidx.appcompat.widget.AppCompatTextView
-                                    android:id="@+id/hd_quality"
-                                    android:layout_width="0dp"
-                                    android:layout_weight="0.700"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="start|center"
-                                    android:padding="5dp"
-                                    android:textStyle="bold"
-                                    android:textSize="15sp"
-                                    android:singleLine="true"
-                                    android:textColor="@color/white_opycity_hundred_present"
-                                    android:gravity="center|start"
-                                    android:text="@string/hd_720p"/>
-
-                            </androidx.appcompat.widget.LinearLayoutCompat>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
-                            app:cardBackgroundColor="@color/button_background_color_2"
-                            app:cardCornerRadius="5dp">
-
-                            <androidx.appcompat.widget.LinearLayoutCompat
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="10dp">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:layout_width="0dp"
-                                    android:layout_weight="0.300"
-                                    android:layout_height="match_parent"
-                                    android:adjustViewBounds="true"
-                                    android:layout_gravity="end"
-                                    android:padding="5dp"
-                                    app:srcCompat="@drawable/ic_sd"/>
-
-                                <androidx.appcompat.widget.AppCompatTextView
-                                    android:id="@+id/sd_quality"
-                                    android:layout_width="0dp"
-                                    android:layout_weight="0.700"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="start|center"
-                                    android:padding="5dp"
-                                    android:textStyle="bold"
-                                    android:textSize="15sp"
-                                    android:singleLine="true"
-                                    android:textColor="@color/text_color_2"
-                                    android:gravity="center|start"
-                                    android:text="@string/sd_420p"/>
-                            </androidx.appcompat.widget.LinearLayoutCompat>
-                        </androidx.cardview.widget.CardView>
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp">
+                                android:layout_gravity="end"
+                                android:layout_weight="0.300"
+                                android:adjustViewBounds="true"
+                                android:padding="5dp"
+                                app:srcCompat="@drawable/ic_hd" />
 
                             <androidx.appcompat.widget.AppCompatTextView
-                                android:layout_width="wrap_content"
+                                android:id="@+id/hd_quality"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:layout_centerInParent="true"
-                                android:text="@string/save_as_default"
+                                android:layout_gravity="start|center"
+                                android:layout_weight="0.700"
+                                android:gravity="center|start"
+                                android:padding="5dp"
+                                android:singleLine="true"
+                                android:text="@string/hd_720p"
                                 android:textColor="@color/white_opycity_hundred_present"
-                                android:textSize="12sp"
-                                tools:ignore="RelativeOverlap" />
+                                android:textSize="15sp"
+                                android:textStyle="bold" />
 
-                            <CheckBox
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerInParent="true"
-                                android:buttonTint="@color/white" />
+                        </androidx.appcompat.widget.LinearLayoutCompat>
+                    </androidx.cardview.widget.CardView>
 
-                        </RelativeLayout>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        app:cardBackgroundColor="@color/button_background_color_2"
+                        app:cardCornerRadius="5dp">
 
-                        <androidx.cardview.widget.CardView
+                        <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="30dp"
-                            android:layout_marginBottom="30dp"
-                            app:cardBackgroundColor="@color/done_button_color"
-                            app:cardCornerRadius="5dp">
+                            android:layout_height="match_parent"
+                            android:layout_margin="10dp">
 
-                            <androidx.appcompat.widget.LinearLayoutCompat
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="end"
+                                android:layout_weight="0.300"
+                                android:adjustViewBounds="true"
+                                android:padding="5dp"
+                                app:srcCompat="@drawable/ic_sd" />
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/sd_quality"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="start|center"
+                                android:layout_weight="0.700"
+                                android:gravity="center|start"
+                                android:padding="5dp"
+                                android:singleLine="true"
+                                android:text="@string/sd_420p"
+                                android:textColor="@color/text_color_2"
+                                android:textSize="15sp"
+                                android:textStyle="bold" />
+                        </androidx.appcompat.widget.LinearLayoutCompat>
+                    </androidx.cardview.widget.CardView>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp">
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerInParent="true"
+                            android:text="@string/save_as_default"
+                            android:textColor="@color/white_opycity_hundred_present"
+                            android:textSize="12sp"
+                            tools:ignore="RelativeOverlap" />
+
+                        <CheckBox
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerInParent="true"
+                            android:buttonTint="@color/white" />
+
+                    </RelativeLayout>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="10dp"
+                        app:cardBackgroundColor="@color/done_button_color"
+                        app:cardCornerRadius="5dp">
+
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="10dp">
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/done"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_margin="10dp">
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:text="@string/done"
+                                android:textColor="@color/white"
+                                android:textSize="15sp"
+                                android:textStyle="bold" />
 
-                                <androidx.appcompat.widget.AppCompatTextView
-                                    android:id="@+id/done"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:layout_gravity="center"
-                                    android:padding="5dp"
-                                    android:textStyle="bold"
-                                    android:textSize="15sp"
-                                    android:textColor="@color/white"
-                                    android:gravity="center"
-                                    android:text="@string/done"/>
-
-                            </androidx.appcompat.widget.LinearLayoutCompat>
-                        </androidx.cardview.widget.CardView>
+                        </androidx.appcompat.widget.LinearLayoutCompat>
+                    </androidx.cardview.widget.CardView>
 
 
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-
-                </androidx.core.widget.NestedScrollView>
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
+
         </androidx.cardview.widget.CardView>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
 
 
     <!--<androidx.appcompat.widget.LinearLayoutCompat
