--- a/app/src/main/res/layout/alert_download_dialog.xml
+++ b/app/src/main/res/layout/alert_download_dialog.xml
@@ -140,6 +140,7 @@
                             tools:ignore="RelativeOverlap" />
 
                         <CheckBox
+                            android:id="@+id/setDefaultCheckbox"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
