--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -48,14 +48,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_centerHorizontal="true"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:visibility="gone" />
-
 
 
     <TextView
@@ -76,8 +75,6 @@
         android:textColor="@color/white_opycity_hundred_present"
         android:textSize="12sp"
         android:visibility="gone" />
-
-
 
 
     <LinearLayout
@@ -160,16 +157,16 @@
                 android:id="@id/exo_play"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:padding="5dp"
                 android:layout_gravity="center_vertical"
+                android:padding="5dp"
                 android:src="@drawable/ic_balaji_pause" />
 
             <ImageView
                 android:id="@id/exo_pause"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:padding="5dp"
                 android:layout_gravity="center_vertical"
+                android:padding="5dp"
                 android:src="@drawable/ic_balaji_play" />
 
 
@@ -321,10 +318,10 @@
                     android:id="@+id/volumeUnMuteButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:padding="5dp"
                     android:layout_gravity="center"
                     android:layout_marginRight="5dp"
                     android:background="@android:color/transparent"
+                    android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_on" />
 
 
@@ -332,10 +329,10 @@
                     android:id="@+id/volumeMuteAndUnMuteButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:padding="5dp"
                     android:layout_gravity="center"
                     android:layout_marginRight="5dp"
                     android:background="@android:color/transparent"
+                    android:padding="5dp"
                     android:src="@drawable/ic_balaji_volume_off"
                     android:visibility="gone" />
 
@@ -346,29 +343,29 @@
                 android:id="@+id/settings_btn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:padding="5dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
                 android:background="@android:color/transparent"
+                android:padding="5dp"
                 android:src="@drawable/ic_balaji_setting" />
 
             <ImageView
                 android:id="@+id/picture_in_picture"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:padding="5dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="5dp"
                 android:background="@android:color/transparent"
+                android:padding="5dp"
                 android:src="@drawable/ic_balaji_pip" />
 
             <ImageView
                 android:id="@+id/enter_full_screen"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:padding="5dp"
                 android:layout_gravity="center_vertical"
                 android:background="@android:color/transparent"
+                android:padding="5dp"
                 android:src="@drawable/ic_balaji_fullscreen" />
 
 
@@ -377,7 +374,7 @@
 
     </RelativeLayout>
 
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@id/video_progress_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -394,66 +391,30 @@
             android:orientation="vertical">
 
 
-
-            <FrameLayout
-                android:id="@+id/previewFrameLayout"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/video_frame"
-                app:layout_constraintDimensionRatio="16:9"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintWidth_default="percent"
-                app:layout_constraintWidth_percent="0.35"
-                android:visibility="invisible"
-                tools:visibility="visible"
-                tools:ignore="MissingConstraints">
-
-                <ImageView
-                    android:id="@+id/videoPreviewImageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="@dimen/video_frame_width"
-                    android:scaleType="fitXY" />
-            </FrameLayout>
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
             <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
                 android:id="@+id/exo_progress"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@id/durationLinearLayout"
+                app:layout_constraintStart_toStartOf="parent"
                 app:previewAnimationEnabled="true"
-                android:layout_gravity="center_vertical"
                 app:previewFrameLayout="@id/previewFrameLayout"
                 app:scrubber_dragged_size="24dp"
-                app:scrubber_enabled_size="16dp" />
+                app:scrubber_enabled_size="16dp"
+                tools:ignore="MissingConstraints" />
 
-            <LinearLayout
-                android:id="@+id/timeUnitlayout"
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/durationLinearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="5dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:orientation="horizontal">
+                tools:ignore="MissingConstraints">
 
                 <TextView
                     android:id="@id/exo_position"
@@ -498,14 +459,40 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:text="3.00" />
 
-            </LinearLayout>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
 
+            <FrameLayout
+                android:id="@+id/previewFrameLayout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/video_frame"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@+id/exo_progress"
+                app:layout_constraintDimensionRatio="16:9"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.35"
+                tools:visibility="visible">
 
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/video_frame_width"
+                    android:scaleType="fitXY" />
+            </FrameLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     <FrameLayout
@@ -535,8 +522,6 @@
         -->
 
     </FrameLayout>
-
-
 
 
 </RelativeLayout>
