--- a/app/src/main/res/layout/balaji_video_player_layout.xml
+++ b/app/src/main/res/layout/balaji_video_player_layout.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:animation_enabled="false"
-        app:controller_layout_id="@layout/balaji_exo_playback_control_view"
+        app:controller_layout_id="@layout/alt_player"
         app:resize_mode="fill" />
 
 
