--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -76,7 +76,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:background="@android:color/transparent"
                 android:src="@drawable/pervious"
                 android:visibility="gone" />
@@ -86,7 +86,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:clickable="true"
@@ -98,7 +98,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:focusable="true"
                 android:clickable="true"
                 android:focusableInTouchMode="true"
@@ -110,7 +110,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:clickable="true"
@@ -123,7 +123,7 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:focusable="true"
                 android:clickable="true"
                 android:focusableInTouchMode="true"
@@ -134,7 +134,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:background="?attr/selectableItemBackground"
@@ -240,8 +240,8 @@
             app:previewAnimationEnabled="true"
             android:background="?attr/selectableItemBackground"
             android:layout_marginRight="10dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             app:previewFrameLayout="@id/previewFrameLayout" />
 
         <!--
